<resources>
    <string name="app_name">Notes</string>
    <string name="btn_Plus">+</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_text">Title</string>
    <string name="description_of_note">Description of note</string>
    <string name="date_text">Date Of Creation</string>
    <string name="btn_save">Save</string>
    <string name="btn_remove">Remove</string>
    <string name="menu_clear_all">Clear all</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_add_a_note">Add a note</string>
    <string name="popup_update_notes">Update notes</string>
    <string name="popup_remove_note">Remove note</string>
    <string name="menu_action_delete">action_delete</string>
    <string name="menu_action_save">action_save</string>
    <string name="menu_action_back">action_back</string>
</resources>