<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_back"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/menu_action_back"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/menu_action_save"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_remove"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_action_delete"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_theme"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/menu_theme"
        app:showAsAction="never"/>

</menu>